[gd_scene load_steps=6 format=2]

[ext_resource path="res://textbox.gd" type="Script" id=1]
[ext_resource path="res://sprites/textbox_day.png" type="Texture" id=2]
[ext_resource path="res://text/ALEAWB__.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://sprites/bits/arrow.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 3 )

[node name="textbox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -512.0
margin_top = -200.0
margin_right = 512.0
texture = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -24.0
margin_bottom = -20.0

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer"]
margin_right = 980.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.854902, 0.678431, 0.0784314, 1 )
custom_constants/line_spacing = 17
text = "Once upon a time there was a guy in a boat.  He was floating along.  Isn't this pretty music? Sometimes I open the game just to listen to it.  "
autowrap = true
percent_visible = 0.0

[node name="Button_Image" type="NinePatchRect" parent="NinePatchRect"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -84.0
margin_top = -20.0
margin_right = -44.0
margin_bottom = 40.0
rect_rotation = 270.0
texture = ExtResource( 4 )

[node name="Button" type="Button" parent="NinePatchRect/Button_Image"]
margin_right = 42.0
margin_bottom = 60.0
flat = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
[connection signal="pressed" from="NinePatchRect/Button_Image/Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
